# Selixy_WindowRust

./: .gitignore  Cargo.toml
src/: main.rs
src/app/: event_loop.rs  mod.rs
src/color/: mod.rs  theme.rs
src/front/: mod.rs
src/front/color/: darkmode.rs  mod.rs  theme.rs  utils.rs
src/front/window/: create.rs  info.rs  init.rs  mod.rs  register.rs  responsive.rs  utils.rs  window.rs
src/front/window/draw/: background.rs  draw.rs  mod.rs  winbuttons.rs
src/front/window/draw/draw_zones/: info_bar.rs  title_bar.rs  workspace.rs
src/front/window/draw/objects/: mod.rs
src/front/window/draw/objects/title_bar/: mod.rs  winbuttons.rs
src/front/window/draw/objects/workspace/: column_outline.rs  column_properties.rs  mod.rs
src/front/window/event/: cliczone.rs  event_tick.rs  input.rs  massages.rs  messages.rs  mod.rs
src/str/: mod.rs  pripitives.rs  vectors.rs
src/windows/: create.rs  draw.rs  event_tick.rs  input.rs  message.rs  mod.rs  register.rs  responsive.rs  utils.rs
src/windows/winbuttons/: constants.rs  drawing.rs  logic.rs  mod.rs  state.rs  winbutton
