[package]
name = "RustWindow"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "libloaderapi", "wingdi", "uxtheme", "winreg", "windef", "winerror"] }
widestring = "0.5"
lazy_static = "1.4.0"
once_cell = "1.10.0"

[build-dependencies]
winres = "0.1"
